botton clr change

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <form class="bg-dark p-5 border border-3 border-danger rounded shadow mt-5">
             <input type="email" placeholder="Email address" class="form-control mb-3">
             <input type="password" placeholder="password" class="form-control mb-4">
-            <button class="btn btn-success">Login</button>
+            <button class="btn btn-warning">Login</button>
         </form>
     </div>
 </body>
